examples/variables.sk
// define variable with the value of 5
let var = 5;

// can also have constants
let imm x = 5;

// error
x = 5;

// re-assign var
var *= 2;

print(var);
